[gd_scene load_steps=30 format=2]

[ext_resource path="res://Texture/Sprite/Santa.png" type="Texture" id=1]
[ext_resource path="res://Script/Santa.gd" type="Script" id=2]
[ext_resource path="res://Shader/flash_shader.gdshader" type="Shader" id=3]
[ext_resource path="res://SFX/hohoho.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/bounce.ogg" type="AudioStream" id=5]
[ext_resource path="res://SFX/explosion.ogg" type="AudioStream" id=6]

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Explode",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": false,
"name": "Bounce",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Spawn",
"speed": 3.0
} ]

[sub_resource type="Animation" id=15]
resource_name = "Bounce"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Bounce" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=16]
resource_name = "Explode"
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Explode" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Hurt"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=14]
resource_name = "Spawn"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Spawn" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19, 28.5 )

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Bounce"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Explode"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Spawn"

[sub_resource type="AnimationNodeTransition" id=21]
input_count = 2
input_0/name = "Idle"
input_0/auto_advance = false
input_1/name = "Attack"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=25]
input_count = 2
input_0/name = "Bounce"
input_0/auto_advance = false
input_1/name = "Spawn"
input_1/auto_advance = false

[sub_resource type="AnimationNodeTransition" id=23]
input_count = 2
input_0/name = "Alive"
input_0/auto_advance = false
input_1/name = "Dead"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=12]
graph_offset = Vector2( 0, -18.9104 )
nodes/Bounce/node = SubResource( 17 )
nodes/Bounce/position = Vector2( 200, 400 )
nodes/Explode/node = SubResource( 18 )
nodes/Explode/position = Vector2( 600, 400 )
nodes/Idle/node = SubResource( 19 )
nodes/Idle/position = Vector2( 400, 200 )
nodes/Spawn/node = SubResource( 24 )
nodes/Spawn/position = Vector2( 200, 540 )
nodes/alive_state/node = SubResource( 21 )
nodes/alive_state/position = Vector2( 600, 200 )
nodes/attack_state/node = SubResource( 25 )
nodes/attack_state/position = Vector2( 400, 400 )
nodes/output/position = Vector2( 1000, 200 )
nodes/state/node = SubResource( 23 )
nodes/state/position = Vector2( 800, 200 )
node_connections = [ "state", 0, "alive_state", "state", 1, "Explode", "output", 0, "state", "attack_state", 0, "Bounce", "attack_state", 1, "Spawn", "alive_state", 0, "Idle", "alive_state", 1, "attack_state" ]

[node name="Santa" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 8 )
frames = SubResource( 3 )
animation = "Idle"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite"]
anims/Bounce = SubResource( 15 )
anims/Explode = SubResource( 16 )
anims/Hurt = SubResource( 9 )
anims/Idle = SubResource( 13 )
anims/RESET = SubResource( 10 )
anims/Spawn = SubResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3.5 )
shape = SubResource( 4 )

[node name="EnemySpawnPosition" type="Position2D" parent="."]
position = Vector2( -32, -32 )

[node name="IntroTimer" type="Timer" parent="."]
wait_time = 4.5
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="InvulnerableTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimatedSprite/AnimationPlayer")
active = true
parameters/alive_state/current = 0
parameters/attack_state/current = 0
parameters/state/current = 0

[node name="IntroSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="BounceSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="ExplodeSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="IntroTimer" to="." method="_on_IntroTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
